--- a/admin/app/views/spree/admin/orders/_line_items.html.erb
+++ b/admin/app/views/spree/admin/orders/_line_items.html.erb
@@ -3,6 +3,7 @@
   <% if @line_items.any? %>
     <div class="card-header d-flex justify-content-between align-items-center">
       <h5 class="card-title d-flex align-items-center">
+        <%= icon('shopping-cart', class: 'mr-2') %>
         <%= Spree.t(:line_items) %>
         <span class="badge badge-info ml-2"><%= @line_items.count %></span>
       </h5>
@@ -15,48 +16,48 @@
         <% if @order.completed? %>
           <button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#line-items" aria-expanded="false" aria-controls="collapseExample">
             <%= Spree.t(:show_details) %>
-            <%= icon('selector', height: 12, class: 'mr-0 ml-1') %>
+            <%= icon('selector', class: 'mr-0 ml-1') %>
           </button>
         <% end %>
       </div>
     </div>
     <div class="card-body mb-0 p-0 <% if @order.completed? && params[:line_item_updated].blank? %>collapse<% else %>show<% end %>" id="line-items">
       <div class="order-line-items">
-        <div class="text-muted text-center border-bottom py-2 px-3 font-size-sm order-line-items__row">
-          <span class="text-left">
+        <div class="d-flex align-items-center text-muted border-bottom py-2 px-3 font-size-sm order-line-items__row">
+          <div class="w-35">
             <%= Spree.t(:item_description) %>
-          </span>
-          <span>
-            <%= Spree.t(:price) %>
-          </span>
-          <span>
-            <%= Spree.t(:quantity) %>
-          </span>
-          <span>
-            <%= Spree.t(:subtotal) %>
-          </span>
-          <span>
-            <%= Spree.t(:tax) %>
-          </span>
-          <span>
-            <%= Spree.t(:discount) %>
-          </span>
-          <span>
-            <%= Spree.t(:total) %>
-          </span>
-          <span>
-          </span>
-        </div>
-        <% if @line_items.any? %>
-          <%= render collection: @line_items, partial: 'spree/admin/orders/line_item', cached: spree_base_cache_scope %>
-        <% else %>
-          <div class="px-3 py-3 text-center text-muted" style="grid-column: 0/-1" >
-            No line items for this order yet.
           </div>
-        <% end %>
+          <div class="w-10">
+            <%= Spree.t(:price) %>
+          </div>
+          <div class="w-10">
+            <%= Spree.t(:quantity) %>
+          </div>
+          <div class="w-10">
+            <%= Spree.t(:subtotal) %>
+          </div>
+          <div class="w-10">
+            <%= Spree.t(:tax) %>
+          </div>
+          <div class="w-10">
+            <%= Spree.t(:discount) %>
+          </div>
+          <div class="w-10">
+            <%= Spree.t(:total) %>
+          </div>
+          <div class="w-5">
+          </div>
+        </div>
+        <%= render collection: @line_items, partial: 'spree/admin/orders/line_item', cached: spree_base_cache_scope %>
       </div>
     </div>
   <% elsif can?(:create, Spree::LineItem.new(order: @order)) %>
+    <div class="card-header">
+      <h5 class="card-title">
+        <%= icon('shopping-cart', class: 'mr-2') %>
+        <%= Spree.t(:line_items) %>
+      </h5>
+    </div>
     <div class="card-body">
       <div data-toggle="modal" data-target="#modal">
         <%= link_to_with_icon 'plus', Spree.t(:new_line_item), spree.new_admin_order_line_item_path(@order), data: { turbo_frame: :dialog_modal }, class: "btn btn-link w-100 py-3" %>
