--- a/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
+++ b/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
@@ -5,7 +5,7 @@
         <%= Spree.t(:return_authorizations) %></h5>
     </div>
     <div class="card-body p-0">
-      <div class="table-responsive bg-white">
+      <div class="table-responsive">
         <table class="table">
           <thead class="border-bottom">
             <tr>
