--- a/admin/app/views/spree/admin/orders/_shipments.html.erb
+++ b/admin/app/views/spree/admin/orders/_shipments.html.erb
@@ -1,7 +1,22 @@
-<% if @shipments.any? %>
-  <%= render partial: "shipment", collection: @shipments %>
-<% elsif !@order.state.in?(['address', 'cart']) %>
-  <p class="text-center text-muted p-3">
-    <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Shipment)) %>
-  </p>
-<% end %>
+<div class="card mb-4 bg-transparent">
+  <div class="card-header d-flex align-items-center border-0">
+    <h6 class="card-title">
+      <%= icon('truck', class: 'mr-2') %>
+      <%= Spree.t(:shipments) %>
+    </h6>
+    <% if @shipments.any? %>
+      <span class="badge badge-info ml-2"><%= @shipments.count %></span>
+
+      <%= order_shipment_state(@order, class: "ml-auto") %>
+    <% end %>
+  </div>
+  <div class="card-body px-1 pt-0 pb-1 d-flex flex-column gap-2">
+    <% if @shipments.any? %>
+      <%= render partial: "shipment", collection: @shipments %>
+    <% else %>
+      <p class="text-center text-muted p-5">
+        <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Shipment)) %>
+      </p>
+    <% end %>
+  </div>
+</div>
