--- a/admin/app/views/spree/admin/orders/_summary.html.erb
+++ b/admin/app/views/spree/admin/orders/_summary.html.erb
@@ -29,7 +29,7 @@
 
     <% if @order.promo_total != 0 %>
       <li class="list-group-item d-flex justify-content-between align-items-center border-0">
-        <span><%= Spree.t(:discounts) %></span>
+        <span><%= Spree.t(:discount_amount) %></span>
         <span class="text-right span" id='date_complete'>
         <%= @order.display_promo_total.to_html %>
       </span>
@@ -47,36 +47,32 @@
       </li>
     <% end %>
 
-    <% if @order.included_tax_total != 0 %>
-      <li class="list-group-item d-flex justify-content-between align-items-center border-0">
-        <span data-hook='admin_order_tab_included_tax_title'><%= Spree.t(:tax_included) %></span>
-        <span id='included_tax_total'>
-          <%= @order.display_included_tax_total.to_html %>
-        </span>
-      </li>
-    <% end %>
+    <li class="list-group-item d-flex justify-content-between align-items-center border-0">
+      <span data-hook='admin_order_tab_included_tax_title'><%= Spree.t(:tax_included) %></span>
+      <span id='included_tax_total'>
+        <%= @order.display_included_tax_total.to_html %>
+      </span>
+    </li>
 
-    <% if @order.additional_tax_total != 0 %>
-      <% tax_lines = order_summary_tax_lines_additional(@order) %>
+    <% tax_lines = order_summary_tax_lines_additional(@order) %>
 
-      <li class="list-group-item border-0">
-        <span class="d-flex justify-content-between align-items-center">
-          <span><%= Spree.t(:tax) %></span>
-          <span id="additional_tax_total">
-            <% if tax_lines.any? %>
-              <%= link_to '#tax-lines-additional', class: 'btn btn-light btn-sm mr-2', data: { toggle: 'collapse' } do %>
-                <%= Spree.t(:show_details) %>
-                <%= icon('selector', height: 12, class: 'mr-0 ml-1') %>
-              <% end %>
+    <li class="list-group-item border-0">
+      <span class="d-flex justify-content-between align-items-center">
+        <span><%= Spree.t(:tax) %></span>
+        <span id="additional_tax_total">
+          <% if tax_lines.any? %>
+            <%= link_to '#tax-lines-additional', class: 'btn btn-light btn-sm mr-2', data: { toggle: 'collapse' } do %>
+              <%= Spree.t(:show_details) %>
+              <%= icon('selector', height: 12, class: 'mr-0 ml-1') %>
             <% end %>
+          <% end %>
 
-            <%= @order.display_additional_tax_total.to_html %>
-          </span>
+          <%= @order.display_additional_tax_total.to_html %>
         </span>
+      </span>
 
-        <%= render 'tax_lines', tax_lines: tax_lines, id: 'tax-lines-additional' %>
-      </li>
-    <% end %>
+      <%= render 'tax_lines', tax_lines: tax_lines, id: 'tax-lines-additional' %>
+    </li>
 
     <%= render 'summary_custom', order: @order %>
 
@@ -84,6 +80,20 @@
       <span data-hook='admin_order_tab_total_title'><%= Spree.t(:total) %></span>
       <span class="font-weight-bold text-capitalize" id='order_total'>
         <%= @order.display_total.to_html %>
+      </span>
+    </li>
+
+    <li class="list-group-item d-flex justify-content-between align-items-center border-top bg-gray-25">
+      <span data-hook='admin_order_tab_payment_total_title'><%= Spree.t(:payment_total) %></span>
+      <span id='payment_total'>
+        <%= @order.display_payment_total.to_html %>
+      </span>
+    </li>
+
+    <li class="list-group-item d-flex justify-content-between align-items-center bg-gray-25">
+      <span data-hook='admin_order_tab_outstanding_balance_title'><%= Spree.t(:outstanding_balance) %></span>
+      <span id='outstanding_balance'>
+        <%= @order.display_outstanding_balance.to_html %>
       </span>
     </li>
   </ul>
