--- a/admin/app/views/spree/admin/orders/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/edit.html.erb
@@ -10,6 +10,7 @@
       <%= render 'customer_returns' %>
       <%= render 'return_authorizations' %>
       <%= render 'payments'%>
+      <%= render 'refunds'%>
 
       <%= render 'body_custom' %>
       <%= render 'summary' %>
