--- a/admin/app/views/spree/admin/orders/return_authorizations/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/edit.html.erb
@@ -2,10 +2,9 @@
   <%= page_header_back_button spree.edit_admin_order_path(@order) %>
 
   <div class="d-flex gap-3 align-items-center">
-    <span><%= Spree.t(:return_authorization) %></span>
-    <span><%= @return_authorization.number %></span>
+    <%= @return_authorization.number %>
 
-    <span class="badge badge-pill badge-<%= @return_authorization.state %>">
+    <span class="badge badge-<%= @return_authorization.state %>">
       <%= Spree.t("return_authorization_states.#{@return_authorization.state}") %>
     </span>
   </div>
