--- a/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
@@ -3,7 +3,7 @@
   <div class="d-flex gap-3 align-items-center">
     <span><%= Spree.t(:return_authorization) %></span>
     <span><%= @return_authorization.number %></span>
-    <span class="badge badge-pill badge-<%= @return_authorization.state %>">
+    <span class="badge badge-<%= @return_authorization.state %>">
       <%= Spree.t("return_authorization_states.#{@return_authorization.state}") %>
     </span>
     <%= local_time(
