--- a/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
+++ b/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
@@ -21,25 +21,28 @@
       <% end %>
 
       <% if promotion_rule.respond_to?(:products) %>
-        <div class="small mt-3">
+        <div class="mt-3">
+          <span><%= Spree.t(:products) %>:</span>
           <% promotion_rule.products.pluck(:name).each do |product_name| %>
-            <code><%= product_name %></code>
+            <strong><%= product_name %></strong>
           <% end %>
         </div>
       <% end %>
 
       <% if promotion_rule.respond_to?(:taxons) %>
-        <div class="small mt-3">
+        <div class="mt-3">
+          <span><%= Spree.t(:taxons) %>:</span>
           <% promotion_rule.taxons.pluck(:pretty_name).each do |taxon_name| %>
-            <code><%= taxon_name %></code>
+            <strong><%= taxon_name %></strong>
           <% end %>
         </div>
       <% end %>
 
       <% if promotion_rule.respond_to?(:users) %>
-        <div class="small mt-3">
+        <div class="mt-3">
+          <span><%= Spree.t(:users) %>:</span>
           <% promotion_rule.users.pluck(:email).each do |user_email| %>
-            <code><%= user_email %></code>
+            <strong><%= user_email %></strong>
           <% end %>
         </div>
       <% end %>
