--- a/core/app/views/spree/shared/_payment.html.erb
+++ b/core/app/views/spree/shared/_payment.html.erb
@@ -1,5 +1,5 @@
 <% source = payment.source %>
-<div class="d-flex flex items-center align-items-center gap-2">
+<div class="d-flex flex items-top align-items-top gap-3">
   <% if source.is_a?(Spree::CreditCard) %>
     <div class="flex-shrink-0">
       <% # display wallet icon, eg. Apple Pay, Google Pay, etc. %>
@@ -8,8 +8,8 @@
       <%= payment_method_icon_tag source.cc_type, height: 30 %>
     </div>
     <div>
-      <p class="mb-1"><%= Spree.t(:ending_with) %> <%=source.last_digits %></p>
-      <p class="mb-0"><%= Spree.t(:expires) %> <%= source.month %> / <%= source.year %></p>
+      <p class="mb-1"> •••• <%=source.last_digits %></p>
+      <p class="mb-0"><%= Spree.t(:expiration) %> <%= source.month %>/<%= source.year %></p>
     </div>
   <% elsif source.is_a?(Spree::StoreCredit) %>
     <% if source.respond_to?(:gift_card) && source.gift_card.present? %>
