Update locales, revert changes to spree configuration

--- a/admin/app/views/spree/admin/stores/form/_checkout.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_checkout.html.erb
@@ -1,5 +1,5 @@
 <%= content_for(:page_title) do %>
-  <%= Spree.t(:checkout_settings) %>
+  <%= Spree.t(:checkout) %> <%= Spree.t(:settings) %>
 <% end %>
 
 <%= content_for :page_alerts do %>
