--- a/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
+++ b/admin/app/views/spree/admin/promotion_rules/_promotion_rule.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag promotion_rule do  %>
-  <div class="card mb-3" id="<%= spree_dom_id(promotion_rule) %>">
+  <div class="card" id="<%= spree_dom_id(promotion_rule) %>">
     <div class="card-header d-flex justify-content-between align-items-center">
       <h5 class="card-title"><%= promotion_rule.human_name %></h5>
 
