re-organise scss

--- a/admin/app/assets/stylesheets/spree/admin/application.scss
+++ b/admin/app/assets/stylesheets/spree/admin/application.scss
@@ -20,6 +20,7 @@
 @import 'components/line_items_form';
 @import 'components/search_picker';
 @import 'components/sortable_tree';
+@import 'components/bulk_panel';
 
 @import 'plugins/tinymce_custom';
 @import 'plugins/trix_custom';
