--- a/admin/app/views/spree/admin/promotions/_actions.html.erb
+++ b/admin/app/views/spree/admin/promotions/_actions.html.erb
@@ -1,5 +1,5 @@
 <div class="card mb-4 bg-transparent">
-  <div class="card-header d-flex justify-content-between">
+  <div class="card-header d-flex justify-content-between border-0">
     <h5 class="card-title">
       <%= icon('bolt', class: 'mr-2') %>
       <%= Spree.t(:promotion_actions) %>
@@ -8,7 +8,7 @@
       <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-primary btn-sm', data: { turbo_frame: 'dialog_modal' } %>
     </span>
   </div>
-  <div class="card-body d-flex flex-column gap-2 p-1">
+  <div class="card-body d-flex flex-column gap-2 px-1 pt-0 pb-1">
     <% if @promotion.promotion_actions.empty? %>
       <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
         <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::PromotionAction)) %>
