--- a/storefront/app/views/themes/default/spree/products/filters/_taxons.erb
+++ b/storefront/app/views/themes/default/spree/products/filters/_taxons.erb
@@ -29,6 +29,7 @@
             <%= f.label "filter_taxon_#{taxon.id}", class: "flex items-center gap-2 cursor-pointer group text-sm h-10", data: { searchable_list_target: "item", text: taxon.name } do %>
               <%= f.check_box "filter[taxon_ids][]",
                 {
+                  id: "filter_taxon_#{taxon.id}",
                   checked: permitted_products_params.dig(:filter, :taxon_ids)&.include?(taxon.id.to_s),
                   class: "input-checkbox group-focus-within:outline"
                 },
@@ -50,6 +51,7 @@
               <%= f.label "filter_taxon_#{taxon.id}", class: "flex items-center gap-2 cursor-pointer group text-sm h-10", data: { searchable_list_target: "item", text: taxon.name } do %>
                 <%= f.check_box "filter[taxon_ids][]",
                   {
+                    id: "filter_taxon_#{taxon.id}",
                     checked: permitted_products_params.dig(:filter, :taxon_ids)&.include?(taxon.id.to_s),
                     class: "input-checkbox group-focus-within:outline"
                   },
