Improve user edit screen & returns

--- a/admin/app/views/spree/admin/orders/_customer_summary.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer_summary.html.erb
@@ -16,7 +16,7 @@
     <%= help_bubble('This order was placed by a guest customer') %>
   <% else %>
     <span class="text-muted">
-      <%= Spree.t(:not_provided) %>
+      <%= Spree.t(:not_available) %>
     </span>
   <% end %>
 <% end %>
