--- a/admin/app/views/spree/admin/payments/source_views/_storecredit.html.erb
+++ b/admin/app/views/spree/admin/payments/source_views/_storecredit.html.erb
@@ -1,5 +1,5 @@
 <fieldset data-hook="store_credit">
-  <legend><%= Spree.t(:store_credit_name) %></legend>
+  <legend><%= Spree.t(:store_credits) %></legend>
   <div class="table-responsive border rounded bg-white">
     <table class="table table-condensed border rounded">
       <tr>
