--- a/admin/app/views/spree/admin/store_credits/new.html.erb
+++ b/admin/app/views/spree/admin/store_credits/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  <%= Spree.t(:store_credit_name) %>
+  <%= Spree.t(:store_credits) %>
 <% end %>
 
 <% content_for :page_title do %>
@@ -13,7 +13,7 @@
   <div class="card mb-4">
     <div class="card-header">
       <h5 class="card-title">
-        <%= Spree.t(:store_credit_name) %>
+        <%= Spree.t(:store_credits) %>
       </h5>
     </div>
 
