--- a/admin/app/views/spree/admin/users/_billing.html.erb
+++ b/admin/app/views/spree/admin/users/_billing.html.erb
@@ -70,7 +70,7 @@
     <% else %>
       <%= turbo_frame_tag :new_address_billing do %>
         <div class="text-center p-5 text-muted">
-          <%= Spree.t(:not_provided) %>
+          <%= Spree.t(:not_available) %>
         </div>
       <% end %>
     <% end %>
