--- a/admin/app/views/spree/admin/users/_tabs.html.erb
+++ b/admin/app/views/spree/admin/users/_tabs.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
   <li class="nav-item" role="presentation">
-    <a class="nav-link" id="pills-store-credits-tab" data-toggle="pill" data-target="#pills-store-credits" role="tab" aria-controls="pills-store-credits" aria-selected="false"><%= Spree.t(:store_credit_name) %></a>
+    <a class="nav-link" id="pills-store-credits-tab" data-toggle="pill" data-target="#pills-store-credits" role="tab" aria-controls="pills-store-credits" aria-selected="false"><%= Spree.t(:store_credits) %></a>
   </li>
 </ul>
 
