--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -8,18 +8,13 @@
   <% if content_for? :title %>
     <%= yield :title %>
   <% else %>
-    <% if @object.present? && @object.persisted? %><%= @object.try(:name) || @object.try(:title) %> - <% end %>
-    <% if @order.present? && @order.persisted? %><%= @order.number %> - <% end %>
-    <% if @parent.present? && @parent.persisted? %>
-      - <%= @parent.try(:name) || @parent.try(:title) || @parent.try(:number) %>
-    <% end %>
-    <%= Spree.t(controller_name, default: controller_name.titleize) %>
+    <% if @object.present? && @object.persisted? %><%= @object.try(:name) || @object.try(:title) %><% end %>
+    <% if @order.present? && @order.persisted? %><%= @order.number %><% end %>
+    - <%= Spree.t(controller_name, default: controller_name.titleize) %>
   <% end %>
-  -
   <% if defined?(current_store) && current_store.present? %>
-    <%= current_store.name.capitalize %>
+    - <%= current_store.name.capitalize %>
   <% end %>
-  - Spree Commerce
 </title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
