--- a/admin/app/views/spree/admin/users/_form.html.erb
+++ b/admin/app/views/spree/admin/users/_form.html.erb
@@ -4,19 +4,19 @@
   <%= f.error_message_on :email %>
 </div>
 <div class="form-group">
-  <%= f.label :phone, Spree.t(:phone) %>
-  <%= f.text_field :phone, class: 'form-control' %>
-  <%= f.error_message_on :phone %>
-</div>
-<div class="form-group">
-  <%= f.label :first_name, Spree.t(:first_name) %>
+  <%= f.label :first_name, raw(Spree.t(:first_name) + required_span_tag) %>
   <%= f.text_field :first_name, class: 'form-control', required: true %>
   <%= f.error_message_on :first_name %>
 </div>
 <div class="form-group">
-  <%= f.label :last_name, Spree.t(:last_name) %>
+  <%= f.label :last_name, raw(Spree.t(:last_name) + required_span_tag) %>
   <%= f.text_field :last_name, class: 'form-control', required: true %>
   <%= f.error_message_on :last_name %>
+</div>
+<div class="form-group">
+  <%= f.label :phone, Spree.t(:phone) %>
+  <%= f.text_field :phone, class: 'form-control' %>
+  <%= f.error_message_on :phone %>
 </div>
 <div class="form-group">
   <%= f.label :tag_list, Spree.t(:tags) %>
