--- a/admin/app/views/spree/admin/users/_shipping.html.erb
+++ b/admin/app/views/spree/admin/users/_shipping.html.erb
@@ -25,7 +25,7 @@
     <% else %>
       <%= turbo_frame_tag :new_address_shipping do %>
         <div class="text-center p-5 text-muted">
-          <%= Spree.t(:not_provided) %>
+          <%= Spree.t(:not_available) %>
         </div>
       <% end %>
     <% end %>
